Reduce gap between form-elements in chrome 2px doesn t seem to be interpreted correctly so remove it

--- a/frontends/default/stylesheets/stylesheet.css
+++ b/frontends/default/stylesheets/stylesheet.css
@@ -625,7 +625,6 @@ letter-spacing: 0;
 
 .active-scaffold li.form-element {
 clear: both;
-padding-top: 2px;
 }
 
 .active-scaffold label {
